# ome-model

./: .appveyor.yml  .gitattributes  .gitignore  .readthedocs.yaml  .ruff.toml  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  MANIFEST.in  NEWS.md  README.md  VERSION  build.gradle  pom.xml  requirements.txt  settings.gradle  setup.py  tox.ini
.github/workflows/: codeql.yml  java.yml  maven.yml  python.yml  tox.yml
cmake/: BoostChecks.cmake  CompilerChecks.cmake  Doxygen.cmake  DoxygenCheck.cmake  FindBoost.cmake  GTest.cmake  GradleVersion.cmake  HeaderTest.cmake  MavenVersion.cmake  Options.cmake  PlatformChecks.cmake  RegexChecks.cmake  RunXsdFu.cmake  SourceArchive.cmake  Sphinx.cmake  TemplateInternalCmdWrapper.cmake.in  TemplateInternalShellWrapper.cmake.in  ThreadChecks.cmake  Version.cmake  XalanChecks.cmake  XercesChecks.cmake  XsdFu.cmake  list-manpage-dependencies.py  list-manpages.py
components/ome-xml/: LICENSE.txt
components/xsd-fu/python/ome/modeltools/: language.py
cpp/: CMakeLists.txt
cpp/cmake/: TemplateInternalCmdWrapper.cmake.in  TemplateInternalShellWrapper.cmake.in  XsdFu.cmake
cpp/lib/ome/xml/: CMakeLists.txt
cpp/test/ome-xml/: transform.cpp
docs/doxygen/: CMakeLists.txt  ome-xml.dox.cmake
docs/sphinx/: CMakeLists.txt  Makefile  assembly.xml  build.gradle  conf.py  index.rst  pom.xml
docs/sphinx/_templates/: layout.html
docs/sphinx/developers/: EnumTool.rst  id-and-lsid.rst  index.rst  ome-units.rst  sample-files.rst  using-ome-xml.rst
docs/sphinx/ome-tiff/: code.rst  data.rst  file-structure.rst  index.rst  specification.rst  tools.rst
docs/sphinx/ome-xml/: index.rst  java-library.rst
docs/sphinx/omero-pyramid/: index.rst
docs/sphinx/schemas/: index.rst  june-2016.rst  transformations.rst
docs/sphinx/specifications/: index.rst
ome-xml/: CMakeLists.txt  build.gradle  pom.xml
ome-xml/src/main/cpp/: CMakeLists.txt
ome-xml/src/main/cpp/ome/test/: CMakeLists.txt  io.cpp  main.cpp
ome-xml/src/main/cpp/ome/xml/: CMakeLists.txt  OMEEntityResolver.h  OMETransform.h  OMETransformResolver.cpp  OMETransformResolver.h  OMEXMLConfig.cmake.in  (+1 more)
ome-xml/src/test/cpp/: CMakeLists.txt  color.cpp  constrained-numeric.h  enum.cpp  model.cpp  non-negative-float.cpp  non-negative-integer.cpp  non-negative-long.cpp  percent-fraction.cpp  positive-float.cpp  positive-integer.cpp  positive-long.cpp  quantity.cpp  quantity.h  timestamp.cpp  transform-resolver.cpp  transform.cpp
ome-xml/src/test/cpp/scripts/: metadata-convert-coverage.cmake.in
ome-xml/src/test/resources/: logback.xml  testng.xml
ome_model/: experimental.py
specification/: build.gradle  omeOxygenDocConfig.xml  pom.xml  publish
specification/samples/2013-06/: transformations-downgrade.ome.xml
specification/samples/2015-01/: transformations-downgrade.ome.xml
specification/samples/2016-06/: ROI.ome.xml  transformations-downgrade.ome.xml
specification/src/main/resources/transforms/: 2008-09-to-2009-09.xsl  2009-09-to-2010-04.xsl  2010-06-to-2003-FC.xsl  2010-06-to-2008-02.xsl
test/unit/: test_image.py  test_plate.py
xsd-fu/: enum-tool  ez_setup.py  pom.xml  setup.py  xsd-fu
xsd-fu/python/: configobj.py  util.py
xsd-fu/python/generateDS/: README  __init__.py  gends_user_methods.py  generateDS.html  generateDS.py  generate_coverage.py  process_includes.py  setup.py
xsd-fu/python/generateDS/Demos/Outline/: outline.py  outline_extended.py  outlinetest.py
xsd-fu/python/generateDS/Demos/People/: peoplesub.py  peoplesup.py
xsd-fu/python/generateDS/Demos/Xmlbehavior/: po.py  xmlbehavior.py  xmlbehavior_sub.py
xsd-fu/python/generateDS/SWIG/: generateDS.py  testsuper.py
xsd-fu/python/generateDS/tests/: out1sub.py  out1sup.py  test.py
xsd-fu/python/genshi/: __init__.py  builder.py  compat.py  core.py  input.py  output.py  path.py  util.py
xsd-fu/python/genshi/filters/: __init__.py  html.py  i18n.py  transform.py
xsd-fu/python/genshi/filters/tests/: __init__.py  i18n.py  test_html.py  transform.py
xsd-fu/python/genshi/template/: __init__.py  ast24.py  astutil.py  base.py  directives.py  eval.py  interpolation.py  loader.py  markup.py  plugin.py  text.py
xsd-fu/python/genshi/template/tests/: __init__.py  base.py  directives.py  eval.py  interpolation.py  loader.py  markup.py  plugin.py  text.py
xsd-fu/python/ome/modeltools/: config.py  entity.py  exceptions.py  generateds.py  language.py  model.py  object.py  property.py  template.py
xsd-fu/templates-cpp/: AggregateMetadata.template  DummyMetadata.template  FilterMetadata.template  MetadataRetrieve.template  MetadataStore.template  OMEXMLMetadata.template  OMEXMLModelEnum.template  OMEXMLModelObject.template  OMEXMLModelObject_XMLAnnotation_asXMLElement_Value.template  OMEXMLModelObject_XMLAnnotation_update_Value.template
xsd-fu/templates-java/: AggregateMetadata.template  DummyMetadata.template  FilterMetadata.template  MetadataRetrieve.template  MetadataStore.template  OMEXMLMetadataImpl.template  OMEXMLModelObject.template
xsd-fu/templates-pybind11/: OMEXMLModelAllEnums.template  OMEXMLModelEnum.template
xsd-fu/templates/cpp/: AggregateMetadata.template  DummyMetadata.template  FilterMetadata.template  MetadataRetrieve.template  MetadataStore.template  OMEXMLMetadata.template  OMEXMLModelEnum.template  OMEXMLModelObject_XMLAnnotation_update_Value.template  OMEXMLModelQuantity.template
xsd-fu/templates/java/: AggregateMetadata.template  FilterMetadata.template  LinkML.template  MetadataRetrieve.template  MetadataStore.template  OMEXMLMetadataImpl.template  OMEXMLMetadataImpl_Channel_ID.template  OMEXMLModelEnum.template  OMEXMLModelEnumHandler.template  OMEXMLModelObject.template  OMEXMLModelObject_XMLAnnotation_asXMLElement_Value.template
xsd-fu/templates/yaml/: LinkML.template  LinkMLEnum.template  LinkMLObject.template
xsd-fu/xslt/: xslt-2008-09-to-2009-09  xslt-apply  xslt-fun  xslt-test  xslt-test2003FCTo200809  xslt-test2003FCTo200809To200909  xslt-test200706To200809  xslt-test200802To200809  xslt-test200809To200909  xslt-test200909To201004  xslt-test201004To201006  xsltbasic.py
(+154 files in other folders)
